--- a/de/index.html
+++ b/de/index.html
@@ -266,7 +266,7 @@
                 <div class="testmonial_active owl-carousel">
                     <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                         <div class="section_title">
-                            <h3>Bewertungen unserer Nutzern</h3>
+                            <h3>Bewertungen unserer Nutzer</h3>
                         </div>
                         <p>Für mich die beste App in diesem Bereich. Schön schlank und frei von Werbung.</p>
                         <div class="rating_author">
@@ -282,7 +282,7 @@
                     </div>
                     <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                         <div class="section_title">
-                            <h3>Bewertungen unserer Nutzern</h3>
+                            <h3>Bewertungen unserer Nutzer</h3>
                         </div>
                         <p>Funktioniert sehr gut, um Hex Werte in RGB umzuwandeln und damit LEDs zu programmieren<br>und Themes zu erstellen</p>
                         <div class="rating_author">
@@ -298,7 +298,7 @@
                     </div>
                     <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                         <div class="section_title">
-                            <h3>Bewertungen unserer Nutzern</h3>
+                            <h3>Bewertungen unserer Nutzer</h3>
                         </div>
                         <p>Genau das Richtige für Designer, wie es in der Bechreibung steht. Dafür 5 Sterne!</p>
                         <div class="rating_author">
@@ -314,7 +314,7 @@
                     </div>
                     <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                         <div class="section_title">
-                            <h3>Bewertungen unserer Nutzern</h3>
+                            <h3>Bewertungen unserer Nutzer</h3>
                         </div>
                         <p>Schönes Tool mit vielen Funktionen.</p>
                         <div class="rating_author">
@@ -405,9 +405,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            &copy; ChilliBits <script>document.write(new Date().getFullYear());</script> - All rights reserved | powered by <a href="https://chillibits.com" target="_blank">ChilliBits</a>
                         </p>
                     </div>
                 </div>
