--- a/de/index.html
+++ b/de/index.html
@@ -84,7 +84,7 @@
                     <div class="col-xl-7 col-md-6">
                         <div class="slider_text ">
                             <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Color Converter</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Bleib informiert über die Feinstaub-Situtation und die Luftqualität!</p>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Finde deine Lieblingsfarben!</p>
                             <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
                                 <a href="./get-started" class="boxed-btn3">Jetzt loslegen</a>
                             </div>
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <h3>Zugriff auf Daten von überall auf der Welt</h3>
+                        <h3>Eine Vielzahl von Funktionen</h3>
                     </div>
                 </div>
             </div>
@@ -114,49 +114,49 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".35s">
                         <div class="thumb">
-                            <img src="img/icon/globe.png" alt="">
+                            <img src="img/icon/color_lens.png" alt="">
                         </div>
-                        <h3>Karte mit allen Sensoren</h3>
+                        <h3>Wählen von Farben</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                         <div class="thumb">
-                          <img src="img/icon/star.png" alt="">
+                          <img src="img/icon/photo_library.png" alt="">
                         </div>
-                        <h3>Sensoren als Favoriten hinzufügen</h3>
+                        <h3>Farben von Bildern wählen</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp " data-wow-duration=".65s" data-wow-delay=".45s">
                         <div class="thumb">
-                           <img src="img/icon/compare.png" alt="">
+                           <img src="img/icon/autorenew.png" alt="">
                         </div>
-                        <h3>Verschiedene Sensoren vergleichen</h3>
+                        <h3>Zufällige Farben erzeugen</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
                         <div class="thumb">
-                            <img src="img/icon/link.png" alt="">
+                            <img src="img/icon/import_export.png" alt="">
                         </div>
-                        <h3>Verknüpfe Deine eigenen Sensoren</h3>
+                        <h3>Speichere, lade und exportiere Farben</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".55s">
                         <div class="thumb">
-                          <img src="img/icon/notification.png" alt="">
+                          <img src="img/icon/volume_up.png" alt="">
                         </div>
-                        <h3>Benachrichtigung bei Grenzwertüberschreitungen</h3>
+                        <h3>Farbennamen vorlesen *</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp " data-wow-duration=".8s" data-wow-delay=".6s">
                         <div class="thumb">
-                           <img src="img/icon/evaluate.png" alt="">
+                           <img src="img/icon/mobile_friendly.png" alt="">
                         </div>
-                        <h3>Daten bequem auswerten</h3>
+                        <h3>Instant-Version verfügbar **</h3>
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
                             <h3>Lade die App herunter</h3>
-                            <p>Bitte klicke auf den Button 'Herunterladen' in der rechten oberen Ecke, um die App von Google Play herunterzuladen.</p>
+                            <p>Bitte klicke auf den Button 'Jetzt ausprobieren' unten, um die App auszuprobieren, ohne sie zu installieren (Link funktioniert nur auf Android-Geräten ordnungsgemäß).</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
@@ -216,10 +216,10 @@
                 <div class="row  align-items-center">
                     <div class="col-xl-5 col-lg-5 col-md-6">
                         <div class="features_info2">
-                            <h3>Alle Funktionen sind intuitiv</h3>
-                            <p>Unsere Funktionen sind so gestaltet, dass jedermann sie nutzen kann!</p>
+                            <h3>Instant-kompatibel</h3>
+                            <p>Die App kann gestartet werden, ohne sie installieren zu müssen! Das hat den Vorteil, dass du sie so schnell wie möglich nutzen kannst und sie keinen Speicherplatz belegt.</p>
                             <div class="about_btn">
-                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Jetzt herunterladen</a>
+                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter&launch=true" target="_blank">Jetzt ausprobieren</a>
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-7 col-md-12 col-lg-6">
-                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Starte jetzt und verbessere die Luftqualität!</h3>
+                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Starte jetzt und lasse dich inspirieren!</h3>
                 </div>
                 <div class="col-xl-5 col-md-12 col-lg-6">
                     <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
