--- a/src/index.html
+++ b/src/index.html
@@ -114,49 +114,49 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".35s">
                         <div class="thumb">
-                            <img src="img/icon/globe.png" alt="">
+                            <img src="img/icon/color_lens.png" alt="">
                         </div>
-                        <h3>str_map_with_all_sensors</h3>
+                        <h3>str_choose_colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                         <div class="thumb">
-                          <img src="img/icon/star.png" alt="">
+                          <img src="img/icon/photo_library.png" alt="">
                         </div>
-                        <h3>str_add_sensors_as_favorites</h3>
+                        <h3>str_choose_image_colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp " data-wow-duration=".65s" data-wow-delay=".45s">
                         <div class="thumb">
-                           <img src="img/icon/compare.png" alt="">
+                           <img src="img/icon/autorenew.png" alt="">
                         </div>
-                        <h3>str_compare_different_sensors</h3>
+                        <h3>str_create_random_colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
                         <div class="thumb">
-                            <img src="img/icon/link.png" alt="">
+                            <img src="img/icon/import_export.png" alt="">
                         </div>
-                        <h3>str_link_your_own_sensors</h3>
+                        <h3>str_save_load_export_colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".55s">
                         <div class="thumb">
-                          <img src="img/icon/notification.png" alt="">
+                          <img src="img/icon/volume_up.png" alt="">
                         </div>
-                        <h3>str_notification_on_threshold_exceedings</h3>
+                        <h3>str_speak_colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp " data-wow-duration=".8s" data-wow-delay=".6s">
                         <div class="thumb">
-                           <img src="img/icon/evaluate.png" alt="">
+                           <img src="img/icon/mobile_friendly.png" alt="">
                         </div>
-                        <h3>str_evaluate_data_comfortable</h3>
+                        <h3>str_instant_version_available</h3>
                     </div>
                 </div>
             </div>
@@ -219,7 +219,7 @@
                             <h3>str_section2_title</h3>
                             <p>str_section2_text</p>
                             <div class="about_btn">
-                                <a class="boxed-btn4" href="url_download" target="_blank">str_download_now</a>
+                                <a class="boxed-btn4" href="url_instant" target="_blank">str_try_now</a>
                             </div>
                         </div>
                     </div>
