--- a/en/features/index.html
+++ b/en/features/index.html
@@ -105,12 +105,12 @@
                             <h3 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Comfortable</h3>
                             <p class="wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".4s">The app has a wide range of features to make the data evaluation as comfortable as possible.</p>
                             <ul>
-                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">Map with all sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">Compare different sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">Link your own sensors</li>
-                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">Notifications on threshold exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">Notifications on threshold exceedings</li>
-                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">Eveluate data comfortable</li>
+                                <li class="wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".5s">str_map_with_all_sensors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".65s" data-wow-delay=".55s">str_compare_different_sensors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".6s">str_link_your_own_sensors</li>
+                                <li class="wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".65s">str_notification_on_threshold_exceedings</li>
+                                <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".7s">str_notification_on_threshold_exceedings</li>
+                                <li class="wow fadeInUp" data-wow-duration=".85s" data-wow-delay=".75s">str_evaluate_data_comfortable</li>
                             </ul>
                         </div>
                     </div>
