--- a/en/get-started/index.html
+++ b/en/get-started/index.html
@@ -99,7 +99,7 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
-                            <h3>Download the app</h3>
+                            <h3>Try the app</h3>
                             <div class="about_btn padding">
                                 <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Download Now</a>
                             </div>
