--- a/en/index.html
+++ b/en/index.html
@@ -84,7 +84,7 @@
                     <div class="col-xl-7 col-md-6">
                         <div class="slider_text ">
                             <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Color Converter</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Stay informed about the particulate matter situation and the air quality!</p>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Find your favorite colors!</p>
                             <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
                                 <a href="./get-started" class="boxed-btn3">Get started</a>
                             </div>
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <h3>Access to data from all around the planet</h3>
+                        <h3>Many kinds of features</h3>
                     </div>
                 </div>
             </div>
@@ -114,49 +114,49 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".55s" data-wow-delay=".35s">
                         <div class="thumb">
-                            <img src="img/icon/globe.png" alt="">
+                            <img src="img/icon/color_lens.png" alt="">
                         </div>
-                        <h3>Map with all sensors</h3>
+                        <h3>Choose colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
                         <div class="thumb">
-                          <img src="img/icon/star.png" alt="">
+                          <img src="img/icon/photo_library.png" alt="">
                         </div>
-                        <h3>Add sensors as favorites</h3>
+                        <h3>Choose colors from images</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp " data-wow-duration=".65s" data-wow-delay=".45s">
                         <div class="thumb">
-                           <img src="img/icon/compare.png" alt="">
+                           <img src="img/icon/autorenew.png" alt="">
                         </div>
-                        <h3>Compare different sensors</h3>
+                        <h3>Create random colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
                         <div class="thumb">
-                            <img src="img/icon/link.png" alt="">
+                            <img src="img/icon/import_export.png" alt="">
                         </div>
-                        <h3>Link your own sensors</h3>
+                        <h3>Save, load and export colors</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration=".75s" data-wow-delay=".55s">
                         <div class="thumb">
-                          <img src="img/icon/notification.png" alt="">
+                          <img src="img/icon/volume_up.png" alt="">
                         </div>
-                        <h3>Notifications on threshold exceedings</h3>
+                        <h3>Speak color names *</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="single_service text-center wow fadeInUp " data-wow-duration=".8s" data-wow-delay=".6s">
                         <div class="thumb">
-                           <img src="img/icon/evaluate.png" alt="">
+                           <img src="img/icon/mobile_friendly.png" alt="">
                         </div>
-                        <h3>Eveluate data comfortable</h3>
+                        <h3>Instant version available **</h3>
                     </div>
                 </div>
             </div>
@@ -184,8 +184,8 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
                             <span>01</span>
-                            <h3>Download the app</h3>
-                            <p>Please click on the download button in the top right corner of this page to download the app from Google Play.</p>
+                            <h3>Try the app</h3>
+                            <p>Please click on the 'Try now' button below to try the app, without installing it (link works only correctly on Android devices).</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
@@ -216,10 +216,10 @@
                 <div class="row  align-items-center">
                     <div class="col-xl-5 col-lg-5 col-md-6">
                         <div class="features_info2">
-                            <h3>All features are intuitive</h3>
-                            <p>Our features are well designed, so that everyone can use them!</p>
+                            <h3>Instant compatible</h3>
+                            <p>The app can be launched without having to install it! That has the advantage, that you can use it as fast as possible and the app does not consume any storage.</p>
                             <div class="about_btn">
-                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter" target="_blank">Download Now</a>
+                                <a class="boxed-btn4" href="https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter&launch=true" target="_blank">Try now</a>
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-7 col-md-12 col-lg-6">
-                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Get started from now and improve the air quality!</h3>
+                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Get started from now and let us inspire you!</h3>
                 </div>
                 <div class="col-xl-5 col-md-12 col-lg-6">
                     <div class="app_download wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
